fixed gutter alignment issue bt charts

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -544,6 +544,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2rem;
 }
 
+.h-40 {
+  height: 10rem;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .w-64 {
   width: 16rem;
 }
@@ -578,6 +586,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-8 {
   width: 2rem;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .flex-1 {
